# ncdfFlow

./: BinaryFiles  DESCRIPTION  NAMESPACE  README  README.Rmd  README.md  cleanup  configure  configure.ac
.github/workflows/: build.yml
R/: AllClasses.R  AllFunctions.R  AllGeneric.R  Ldpath.R  RcppExports.R  bitVector.R  extractFlowFrame.R  ldflags.R  ncdfFlowList-methods.R  ncdfFlowSet-Subset-methods.R  ncdfFlowSet-accessors.R  ncdfFlowSet-plot-methods.R  ncdfFlowSet-rbind-methods.R  ncdfFlowSet-split-methods.R  ncdfIO.R  subset-functions.R  subset-methods.R
inst/: NEWS
inst/doc/: ncdfFlow.Rnw
inst/include/: ncdfFlow.h  ncdfFlowAPI.h
inst/tests/: clone.nc  ncfsTest.nc  test_IO.R  test_compensation.R  test_misc.R  test_ncdfFlowList.R  test_ncdfFlowSet_accessor.R
man/: Indices.Rd  addFrame-methods.Rd  as.flowSet.Rd  clone.ncdfFlowSet.Rd  extractFlowFrame.Rd  flowSet-accessor.Rd  getFileName.Rd  getIndices-ncdfFlowSet-character-method.Rd  initIndices-ncdfFlowSet-method.Rd  lapply-methods.Rd  ncdfFlow-package.Rd  ncdfFlow.Rd  ncdfFlowList-class.Rd  ncdfFlowSet-Subset.Rd  ncdfFlowSet-class.Rd  ncdfFlowSet-constructor.Rd  ncdfFlowSet-flowSet-method.Rd  ncdfFlowSet-split.Rd  ncfsApply-ncdfFlowSet-method.Rd  plot.Rd  rbind2-method.Rd  read.ncdfFlowSet.Rd  replacement-method-for-ncdfFlowSet.Rd  save_ncfs.Rd  sub-ncdfFlowSet-ANY-method.Rd  sub-sub-ncdfFlowSet-ANY-method.Rd  subset-functions.Rd  subset-methods.Rd  subset.Rd  unlink-ncdfFlowSet-method.Rd  updateIndices-ncdfFlowSet-character-logical-method.Rd
src/: .cproject  .project  Makevars  Makevars.in  Makevars.win  RcppExports.cpp  bitOps.c  bitOps.cpp  hdfFlow.c  hdfFlow.cpp  hdfFlow.h  init.c  ncdfFlow.h  netCDF.c  readFrame.cpp  wrappers.c  wrappers.h
tests/: run-all.R  testthat.R
tests/testthat/: helper_data.R  helper_equal_function.R  test_IO.R  test_compensation.R  test_ncdfFlowList.R  test_ncdfFlowSet_accessor.R
vignettes/: ncdfFlow.Rnw
